@startuml "AirBnB Database Schema"
title ProDev Backend - AirBnB Database Schema

entity "User" as User {
  *user_id : UUID <<PK>>
  --
  first_name : VARCHAR
  last_name : VARCHAR
  email : VARCHAR <<UNIQUE>>
  password_hash : VARCHAR
  phone_number : VARCHAR
  role : ENUM(guest, host, admin)
  created_at : TIMESTAMP
}

entity "Property" as Property {
  *property_id : UUID <<PK>>
  --
  host_id : UUID <<FK>>
  name : VARCHAR
  description : TEXT
  location : VARCHAR
  pricepernight : DECIMAL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Booking" as Booking {
  *booking_id : UUID <<PK>>
  --
  property_id : UUID <<FK>>
  user_id : UUID <<FK>>
  start_date : DATE
  end_date : DATE
  total_price : DECIMAL
  status : ENUM(pending, confirmed, canceled)
  created_at : TIMESTAMP
}

entity "Payment" as Payment {
  *payment_id : UUID <<PK>>
  --
  booking_id : UUID <<FK>>
  amount : DECIMAL
  payment_date : TIMESTAMP
  payment_method : ENUM(credit_card, paypal, stripe)
}

entity "Review" as Review {
  *review_id : UUID <<PK>>
  --
  property_id : UUID <<FK>>
  user_id : UUID <<FK>>
  rating : INTEGER [1-5]
  comment : TEXT
  created_at : TIMESTAMP
}

entity "Message" as Message {
  *message_id : UUID <<PK>>
  --
  sender_id : UUID <<FK>>
  recipient_id : UUID <<FK>>
  message_body : TEXT
  sent_at : TIMESTAMP
}

User ||--o{ Property : hosts >
User ||--o{ Booking : books >
User ||--o{ Review : writes >
User ||--o{ Message : sends >
User ||--o{ Message : receives >

Property ||--o{ Booking : has >
Property ||--o{ Review : receives >

Booking ||--o{ Payment : pays with >

@enduml
